--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gen_conn():\n",
     "    try:\n",
-    "        conn = psycopg2.connect(\"dbname='postgres' user='postgres' host='localhost' password='postgres'\")\n",
+    "        conn = psycopg2.connect(\"dbname='postgres' user='postgres' host='postgres' password='postgres'\")\n",
     "    except:\n",
     "        print(\"I am unable to connect to the database\")\n",
     "    return conn\n"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +89,8 @@
      "output_type": "stream",
      "text": [
       "10000\n",
-      "CPU times: user 1.01 ms, sys: 847 µs, total: 1.86 ms\n",
-      "Wall time: 1.54 ms\n"
+      "CPU times: user 1.28 ms, sys: 310 µs, total: 1.59 ms\n",
+      "Wall time: 1.56 ms\n"
      ]
     }
    ],
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 383 ms, sys: 974 ms, total: 1.36 s\n",
-      "Wall time: 30.4 s\n"
+      "CPU times: user 762 ms, sys: 874 ms, total: 1.64 s\n",
+      "Wall time: 31.6 s\n"
      ]
     }
    ],
@@ -135,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.7 ms, sys: 0 ns, total: 20.7 ms\n",
-      "Wall time: 77.7 ms\n"
+      "CPU times: user 23.2 ms, sys: 0 ns, total: 23.2 ms\n",
+      "Wall time: 51.1 ms\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -209,9 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loop\n",
+      "dropping - DROP TABLE loop;\n",
+      "block\n",
+      "dropping - DROP TABLE block;\n"
+     ]
+    }
+   ],
    "source": [
     "conn=gen_conn()\n",
     "drop_tables(conn)\n",
@@ -232,7 +243,7 @@
    "hash": "c51f0b5d574ebe494808dc4236239f52f618fbfe8a781a626e2e51d099bcd1a5"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -246,10 +257,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.10"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
