--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,10 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set up tables\n",
+    "\n",
     "conn=gen_conn()\n",
     "create_tables(conn)\n",
     "conn.commit()\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -89,13 +91,15 @@
      "output_type": "stream",
      "text": [
       "10000\n",
-      "CPU times: user 1.28 ms, sys: 310 µs, total: 1.59 ms\n",
-      "Wall time: 1.56 ms\n"
+      "CPU times: user 1.8 ms, sys: 300 µs, total: 2.1 ms\n",
+      "Wall time: 2.02 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# prep data\n",
+    "\n",
     "data = []\n",
     "for i in range(size):\n",
     "    data.append((i,\"test\"))\n",
@@ -104,29 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 762 ms, sys: 874 ms, total: 1.64 s\n",
-      "Wall time: 31.6 s\n"
+      "CPU times: user 607 ms, sys: 982 ms, total: 1.59 s\n",
+      "Wall time: 32 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# Loop\n",
+    "# writes in a loop\n",
+    "\n",
     "conn = gen_conn()\n",
     "sql = \"\"\"INSERT INTO loop(id,data) VALUES(%s,%s)\"\"\"\n",
     "cur = conn.cursor()\n",
     "for i in data:\n",
     "    try:\n",
-    "        # print(f'{i[0]},{i[1]}')\n",
     "        cur.execute(sql,(i[0],i[1]))\n",
-    "        # print(i)\n",
     "        conn.commit()\n",
     "    except:\n",
     "        conn.rollback() \n",
@@ -135,33 +138,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 23.2 ms, sys: 0 ns, total: 23.2 ms\n",
-      "Wall time: 51.1 ms\n"
+      "CPU times: user 11 ms, sys: 11.6 ms, total: 22.5 ms\n",
+      "Wall time: 49.9 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# block\n",
+    "# writes in a block\n",
+    "\n",
     "conn = gen_conn()\n",
     "sql = \"\"\"INSERT INTO block (id,data) VALUES %s\"\"\" \n",
     "cur = conn.cursor()\n",
     "execute_values(cur, sql, data, template=None, page_size=100)\n",
     "conn.commit()\n",
-    "# cur.executemany(sql, data)\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -174,18 +177,17 @@
    ],
    "source": [
     "# prove there is data in loop\n",
+    "\n",
     "conn = gen_conn()\n",
     "cur=conn.cursor()\n",
     "cur.execute(\"\"\"select * from loop\"\"\")\n",
     "print(cur.fetchall()[:10])\n",
-    "# for table in cursor.fetchall():\n",
-    "#     print(table)\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +200,7 @@
    ],
    "source": [
     "# prove there is data in block\n",
+    "\n",
     "conn = gen_conn()\n",
     "cur=conn.cursor()\n",
     "cur.execute(\"\"\"select * from block\"\"\")\n",
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +227,8 @@
     }
    ],
    "source": [
+    "# drop tables\n",
+    "\n",
     "conn=gen_conn()\n",
     "drop_tables(conn)\n",
     "conn.commit()\n",
