--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +91,8 @@
      "output_type": "stream",
      "text": [
       "10000\n",
-      "CPU times: user 1.8 ms, sys: 300 µs, total: 2.1 ms\n",
-      "Wall time: 2.02 ms\n"
+      "CPU times: user 1.67 ms, sys: 371 µs, total: 2.04 ms\n",
+      "Wall time: 1.97 ms\n"
      ]
     }
    ],
@@ -108,15 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 607 ms, sys: 982 ms, total: 1.59 s\n",
-      "Wall time: 32 s\n"
+      "CPU times: user 443 ms, sys: 1.3 s, total: 1.74 s\n",
+      "Wall time: 40.1 s\n"
      ]
     }
    ],
@@ -138,15 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 ms, sys: 11.6 ms, total: 22.5 ms\n",
-      "Wall time: 49.9 ms\n"
+      "CPU times: user 22.5 ms, sys: 0 ns, total: 22.5 ms\n",
+      "Wall time: 48.3 ms\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
